--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,6 @@
 @import "./main_chat";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
-
+@import "./user";
+@import "./colors";
+@import "./flash";
