--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,17 +1,21 @@
 .side_bar
   .side_box
     %p.side_name
-       = current_user.name
+      =current_user.name
     .side_icon
-      =link_to "#", class: "side_btn" do
+      =link_to new_group_path, class: "side_btn" do
         = icon('fas', 'edit')
-      =link_to "edit_user_path(current_user)", class: "side_btn" do
+      =link_to edit_user_path(current_user), class: "side_btn" do
         = icon('fas', 'cog')
 
-  .comments
-    .comments__message
-      %h1 test
-      %p まだメッセージはありません
+  .groups
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            = group.name
+          .group__message
+            メッセージはまだありません。
 
 
   
