--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,30 +2,23 @@
   .main-box
     .main-box_left_menu
       .main-box_left_menu_name
-        %h1 group name
+        = @group.name
       .main-box_left_menu_member-list
-        %p Member:
+        Member: 
+        - @group.users.each do |user|
+          = user.name
+        
     .main-box_edit
-      %h2 Edit
+      = link_to "Edit", edit_group_path(params[:group_id])
 
   .chat_box
-    .chat_box_main
-      .chat_box_main_up
-        .chat_box_main_up_user
-          %h1 aaa
-        .chat_box_main_up_date
-          %h2 2019/11/13 10:00
-
-      .chat_box_main_messages
-        %p Hello World
+    = render @messages
+        
 
     .chat_box_form_box
-      .chat_box_form_box_text
-        %input{class: "chat_box_form_box_text", type: "text", placeholder: "type a message"}
-        .chat_box_form_box_image
-          %label{class: "chat_box_form_box_image"}
-            = icon('fas', 'image')
-            %input{class: "chat_box_form_box_select", type: "file"}
-      .chat_box_form_box_btn
-        %input{class: "chat_box_form_box_submit", type: "submit", value: "Send"}
-   
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: "chat_box_form_box_text", placeholder: "type a message" 
+        = f.label :image, class: "chat_box_form_box_image" do
+          = icon('fas', 'image')
+          = f.file_field :image, class: "chat_box_form_box_select"
+        = f.submit 'Send', class: "chat_box_form_box_submit" 
