--- a/app/assets/stylesheets/_side_bar.scss
+++ b/app/assets/stylesheets/_side_bar.scss
@@ -17,9 +17,11 @@
       color: #ffffff;
     }}
   
-    &_btn {}
+    &_icon {}
     a{
       color: #ffffff;
+      text-decoration: none;
+      
    }}}
 
 
@@ -30,9 +32,11 @@
   width: 300px;
   background-color: #2F3e51;
   padding: 0px 20px;
-  &group {
+}
+
+.group {
     padding: 20px 0px 40px 0px;
-  }
+  
   &__name {
     color: #ffffff;
     font-size: 15px bold;
@@ -40,7 +44,7 @@
   &__message {
     font-size: 11px ;
     color: #ffffff;
-    padding: 0px 0px 40px 0px;
-  }
-}
+    padding: 0px 5px 0px 0px;
+  }}
+
 }
